fix: change white text color to var accent-text-color

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -49,6 +49,6 @@
 
   &:hover {
     background-color: var(--react-autoql-danger-color, #ca0b00);
-    color: #fff;
+    color: var(--react-autoql-accent-text-color);
   }
 }
