--- a/src/components/SendToSlackModal/SendToSlackModal.scss
+++ b/src/components/SendToSlackModal/SendToSlackModal.scss
@@ -103,7 +103,7 @@
 
     &.selected {
       background-color: var(--react-autoql-accent-color);
-      color: #fff;
+      color: var(--react-autoql-accent-text-color);
     }
 
     &:hover:not(.selected) {
