--- a/src/components/Steps/Steps.scss
+++ b/src/components/Steps/Steps.scss
@@ -15,7 +15,7 @@
     .react-autoql-step-dot {
       border-color: var(--react-autoql-accent-color, #26a7df);
       background: var(--react-autoql-accent-color, #26a7df);
-      color: #fff;
+      color: var(--react-autoql-accent-text-color);
     }
   }
 
