--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -24,6 +24,7 @@
   width: 100%;
   height: 60px;
   background: var(--react-autoql-accent-color);
+  color: var(--react-autoql-accent-text-color);
   box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.1);
   flex-grow: 0;
   flex-shrink: 0;
@@ -466,7 +467,7 @@
 }
 .page-switcher-container.bottom .tab.active {
   background: var(--react-autoql-accent-color);
-  color: #fff;
+  color: var(--react-autoql-accent-text-color);
   font-weight: bold;
 }
 
