--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -253,6 +253,7 @@
     width: 4px;
 
     background: var(--react-autoql-accent-color, #26a7df);
+    color: var(--react-autoql-accent-text-color);
 
     transition-property: opacity;
     transition-duration: 0.2s;
@@ -274,7 +275,7 @@
       width: 45px;
       line-height: 45px;
       font-size: 22px;
-      color: white;
+      color: var(--react-autoql-accent-text-color);
       background-color: var(--react-autoql-accent-color, #26a7df);
       text-align: center;
       margin-top: 13px;
