--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -16,6 +16,16 @@
   }
 
   .dashboard-drilldown-modal-content {
+    &.chart-hidden {
+      .react-autoql-dashboard-drilldown-original,
+      .layout-splitter {
+        display: none;
+      }
+      .layout-pane:not(.layout-pane-primary) {
+        height: calc(100% - 50px) !important;
+      }
+    }
+
     .react-autoql-modal-body {
       padding: 0;
     }
