--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -71,9 +71,19 @@
   .react-autoql-table .tabulator-col {
     height: 72px !important;
   }
-  .react-autoql-table .tabulator-header-filter {
+
+  &.infinite .tabulator-col.DATE_STRING .tabulator-header-filter,
+  &.infinite .tabulator-col.DATE .tabulator-header-filter {
+    display: none;
+  }
+
+  &.limited .tabulator-col .tabulator-header-filter,
+  &.infinite
+    .tabulator-col:not(.DATE_STRING):not(.DATE)
+    .tabulator-header-filter {
     display: inline;
   }
+
   .react-autoql-table .tabulator-tableHolder {
     min-height: calc(100% - 74px) !important;
     height: calc(100% - 74px) !important;
