--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -3,6 +3,34 @@
   max-width: 100%;
   width: 100%;
   background-color: inherit;
+  position: relative;
+
+  &.infinite:not(.last-page) .tabulator-row:last-child {
+    margin-bottom: 40px;
+  }
+
+  .table-loader {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
+    background-color: transparent;
+    color: var(--react-autoql-accent-color);
+
+    &.table-page-loader {
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+    }
+
+    &.table-scroll-loader {
+      bottom: 20px;
+      width: 100%;
+      z-index: 0;
+    }
+  }
 }
 
 .react-autoql-table {
@@ -46,6 +74,8 @@
 .react-autoql-table .tabulator-row {
   /* user-select: none; This breaks copy/paste */
   border-bottom: 1px solid var(--react-autoql-border-color);
+  background-color: var(--react-autoql-background-color-primary);
+  z-index: 1;
 }
 .tabulator-cell:not(:first-child) {
   border-left: 1px solid !important;
@@ -71,9 +101,19 @@
   .react-autoql-table .tabulator-col {
     height: 72px !important;
   }
-  .react-autoql-table .tabulator-header-filter {
+
+  &.infinite .tabulator-col.DATE_STRING .tabulator-header-filter,
+  &.infinite .tabulator-col.DATE .tabulator-header-filter {
+    display: none;
+  }
+
+  &.limited .tabulator-col .tabulator-header-filter,
+  &.infinite
+    .tabulator-col:not(.DATE_STRING):not(.DATE)
+    .tabulator-header-filter {
     display: inline;
   }
+
   .react-autoql-table .tabulator-tableHolder {
     min-height: calc(100% - 74px) !important;
     height: calc(100% - 74px) !important;
