--- a/src/components/Cascader/Cascader.scss
+++ b/src/components/Cascader/Cascader.scss
@@ -53,6 +53,7 @@
       justify-content: space-between;
       border-radius: 2px;
       padding-left: 10px;
+      transition: color 0.1s ease, background-color 0.2s ease;
 
       .option-arrow {
         opacity: 0.7;
