--- a/src/components/ChatContent/ChatContent.scss
+++ b/src/components/ChatContent/ChatContent.scss
@@ -1,23 +1,14 @@
-.react-autoql-drawer .chat-message-container {
-  scroll-behavior: smooth !important;
-  max-height: calc(100% - 140px);
-  overflow-y: auto;
-  overflow-x: hidden;
-  flex: 1;
-
-  .custom-scrollbar-container {
-    overflow-x: hidden !important;
-    margin-bottom: 0 !important;
-  }
+.react-autoql-drawer .chat-message-scroll-container {
+  // scroll-behavior: smooth !important;
+  // max-height: calc(100% - 140px);
+  // overflow-y: auto;
+  // overflow-x: hidden;
+  // flex: 1;
 }
 
-/* custom scrollbar */
-.react-autoql-drawer .chat-message-container > div:last-child {
-  opacity: 0;
-  transition: opacity 200ms ease;
-}
-.react-autoql-drawer .chat-message-container:hover > div:last-child {
-  opacity: 1;
+.custom-scrollbar-container {
+  overflow-x: hidden !important;
+  margin-bottom: 0 !important;
 }
 
 .react-autoql-drawer .response-loading-container {
