--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -1,6 +1,6 @@
 .react-autoql-table-container {
   flex: 1;
-  max-width: calc(100% - 10px);
+  max-width: 100%;
   width: 100%;
   background-color: inherit;
   position: relative;
@@ -35,7 +35,7 @@
 }
 
 .react-autoql-table {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 
 /* tabulator */
@@ -102,7 +102,8 @@
   width: 100vw;
 
   .react-autoql-table {
-    display: none;
+    // display: none;
+    visibility: hidden;
   }
 }
 
@@ -143,9 +144,9 @@
     display: none;
   }
   .react-autoql-table .tabulator-tableHolder {
-    min-height: calc(100% - 40px) !important;
-    height: calc(100% - 40px) !important;
-    max-height: calc(100% - 40px) !important;
+    min-height: calc(100% - 34px) !important;
+    height: calc(100% - 34px) !important;
+    max-height: calc(100% - 34px) !important;
   }
 }
 
