--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -454,7 +454,7 @@
 .dashboard-tile-input-container .react-autosuggest__section-title {
   padding: 10px 0 0 10px;
   font-size: 12px;
-  color: #777;
+  color: var(--react-autoql-text-color-placeholder);
 }
 
 /* Dragging placeholder styles */
