--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -236,7 +236,7 @@
       .react-autosuggest__section-title {
         padding: 10px 0 0 10px;
         font-size: 12px;
-        color: #777;
+        color: var(--react-autoql-text-color-placeholder);
       }
     }
   }
