--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -125,6 +125,10 @@
   max-height: 150px;
   width: 100%;
   margin-top: 10px;
+
+  &.no-margin {
+    margin: 0;
+  }
 }
 
 .dashboard-data-limit-warning-icon {
