--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,12 @@
 // a {
 //   color: var(--react-autoql-accent-color, #26a7df);
 // }
+
+.react-autoql-card {
+  border-radius: 10px;
+  background: var(--react-autoql-background-color-primary);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  padding: 10px;
+  margin: 10px;
+}
