--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -1,12 +1,170 @@
-.data-explorer-data-preview {
-  .tabulator-col-content,
-  .tabulator-cell {
-    cursor: pointer !important;
-    transition: color 0.2s ease;
+.data-preview-section {
+  flex: 1;
+  min-height: 200px;
+  max-height: 500px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  margin: 0 10px;
+
+  .data-explorer-data-preview {
+    flex: 1;
+    min-height: 0;
+    display: flex;
+    flex-direction: column;
+
+    .data-preview-loading-container {
+      height: 200px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .tabulator-col-content,
+    .tabulator-cell {
+      cursor: pointer !important;
+      transition: color 0.2s ease;
+
+      &:hover {
+        color: var(--react-autoql-accent-color);
+        font-weight: 600;
+      }
+    }
+
+    .data-preview {
+      flex: 1 1 auto;
+      padding: 10px;
+    }
+
+    .data-preview-scroll-container,
+    .custom-scrollbar-view {
+      width: 100%;
+      height: 100%;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: auto;
+    }
+
+    table {
+      table-layout: fixed;
+      border-collapse: collapse;
+    }
+    thead {
+      th {
+        top: 0;
+        padding: 0 6px;
+        height: 35px;
+        position: sticky;
+        background: var(--react-autoql-background-color-primary);
+        box-shadow: inset 0 -2px 0 var(--react-autoql-border-color);
+        transition: color 0.2s ease;
+        cursor: pointer;
+        // &:hover {
+        color: var(--react-autoql-accent-color);
+        // }
+        .data-preview-col-header {
+          height: 100%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+    }
+    tbody {
+      tr {
+        height: 30px;
+        &:not(:last-child) {
+          border-bottom: 1px solid var(--react-autoql-border-color);
+        }
+        td {
+          padding: 0 10px;
+          &:not(:last-child) {
+            border-right: 1px solid var(--react-autoql-border-color);
+          }
+        }
+      }
+    }
+  }
+}
+
+.data-explorer-page-container .data-preview-tooltip {
+  --border-color: var(--react-autoql-border-color);
+  --bg-color: var(--react-autoql-background-color-primary);
+
+  opacity: 1 !important;
+  padding: 15px 25px !important;
+  font-size: 0.875rem !important;
+  background: var(--bg-color);
+  border: 2px solid var(--border-color);
+  color: var(--react-autoql-text-color);
+  box-shadow: rgba(102, 105, 109, 0.2) 0px 8px 24px;
+
+  &.place-bottom {
+    &::before {
+      border-bottom-color: var(--border-color) !important;
+    }
+    &::after {
+      border-bottom-color: var(--bg-color) !important;
+    }
+  }
+  &.place-top {
+    &::before {
+      border-top-color: var(--border-color) !important;
+    }
+    &::after {
+      border-top-color: var(--bg-color) !important;
+    }
+  }
+  &.place-right {
+    &::before {
+      border-right-color: var(--border-color) !important;
+    }
+    &::after {
+      border-right-color: var(--bg-color) !important;
+    }
+  }
+  &.place-left {
+    &::before {
+      border-left-color: var(--border-color) !important;
+    }
+    &::after {
+      border-left-color: var(--bg-color) !important;
+    }
+  }
+
+  p {
+    margin-bottom: 0;
+  }
+
+  .data-explorer-tooltip-section {
+    &:not(:last-child) {
+      margin-bottom: 5px;
+    }
+  }
+
+  .data-explorer-tooltip-title {
+    font-weight: 600;
+  }
+
+  .data-explorer-tooltip-query {
+    cursor: pointer;
+    color: var(--react-autoql-accent-color);
+    font-weight: 600;
 
     &:hover {
-      color: var(--react-autoql-accent-color);
-      font-weight: 600;
+      text-decoration: underline;
+    }
+
+    .react-autoql-icon {
+      margin-left: -4px;
+
+      svg {
+        stroke-width: 1px;
+        stroke: currentColor;
+      }
     }
   }
 }
