--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -1,15 +1,31 @@
-.data-preview-section {
-  flex: 1;
-  min-height: 200px;
-  max-height: 500px;
+.data-explorer-section {
+  flex: 0 1 auto;
+  max-height: 100%;
   position: relative;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   margin: 0 10px;
 
+  &.collapsed,
+  &.data-preview-section,
+  &.data-preview-section .react-autoql-card-content,
+  &.data-preview-section .react-autoql-card-user-content {
+    flex: 0 0 auto !important;
+  }
+
+  .data-preview-scroll-container,
+  .custom-scrollbar-view {
+    width: 100%;
+    height: 100%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: auto;
+  }
+
   .data-explorer-data-preview {
-    flex: 1;
+    flex: 0 0 auto;
+    overflow: hidden;
     min-height: 0;
     display: flex;
     flex-direction: column;
@@ -34,17 +50,8 @@
     }
 
     .data-preview {
-      flex: 1 1 auto;
-      padding: 10px;
-    }
-
-    .data-preview-scroll-container,
-    .custom-scrollbar-view {
-      width: 100%;
-      height: 100%;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: auto;
+      max-height: 100%;
+      padding: 0 5px;
     }
 
     table {
@@ -75,7 +82,7 @@
     }
     tbody {
       tr {
-        height: 30px;
+        height: 27px;
         &:not(:last-child) {
           border-bottom: 1px solid var(--react-autoql-border-color);
         }
