--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -21,7 +21,7 @@
 
     .react-autoql-card-user-content {
       flex: 0 1 auto;
-      min-height: 0;
+      min-height: 100px;
       max-height: 100%;
       position: relative;
       overflow: hidden;
