--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -18,36 +18,35 @@
 }
 
 /* These are not inline styles since they do not apply to saved PNG charts */
-.react-autoql-chart-container .square {
+.react-autoql-chart-container .square,
+.react-autoql-chart-container .line-dot {
   transition: fill-opacity 0.3s ease;
+  outline: none !important;
 }
 
 .react-autoql-chart-container .bar,
-/* .react-autoql-chart-container .line-dot, */
 .react-autoql-chart-container .stacked-bar,
 .react-autoql-chart-container .circle {
   transition: fill-opacity 0.3s ease;
   fill-opacity: 0.7 !important;
+  outline: none !important;
 }
 
 .react-autoql-chart-container .bar:hover,
-/* .react-autoql-chart-container .line-dot:hover, */
-.react-autoql-chart-container .stacked-bar:hover,
 .react-autoql-chart-container .circle:hover,
-.react-autoql-chart-container .square:hover {
-  fill-opacity: 1 !important;
-}
-
-.react-autoql-chart-container .vertex-dot:hover,
+.react-autoql-chart-container .square:hover,
 .react-autoql-chart-container .line-dot:hover,
-.react-autoql-chart-container .line-dot.active {
-  opacity: 1 !important;
-}
-
+.react-autoql-chart-container .vertex-dot:hover,
+.react-autoql-chart-container .stacked-bar:hover,
 .react-autoql-chart-container .bar.active,
-/* .react-autoql-chart-container .line-dot.active, */
+.react-autoql-chart-container .line-dot.active,
 .react-autoql-chart-container .stacked-bar.active {
   fill-opacity: 1 !important;
+}
+
+.react-autoql-chart-container .react-autoql-heatmap-chart g.tick line,
+.react-autoql-chart-container .react-autoql-bubble-chart g.tick line {
+  opacity: 0 !important; // we need to render the tick lines so the bounding box calcs are correct. But we dont want to see them
 }
 
 .axis {
@@ -63,11 +62,6 @@
   transition: opacity 0.3s ease;
 }
 
-.react-autoql-chart-container .react-autoql-heatmap-chart g.tick line,
-.react-autoql-chart-container .react-autoql-bubble-chart g.tick line {
-  opacity: 0 !important; // we need to render the tick lines so the bounding box calcs are correct. But we dont want to see them
-}
-
 .axis-selector-container {
   background: var(--react-autoql-background-color-primary);
   color: var(--react-autoql-text-color-primary);
@@ -79,6 +73,7 @@
 
   .axis-select-option.active {
     background: var(--react-autoql-hover-color);
+    outline: none !important;
   }
   .react-autoql-checkbox {
     margin-left: 20px;
