fix: notification count badge

--- a/src/components/Notifications/NotificationIcon/NotificationIcon.scss
+++ b/src/components/Notifications/NotificationIcon/NotificationIcon.scss
@@ -28,7 +28,7 @@
   .react-autoql-notifications-badge-dot {
     position: absolute;
     display: inline-block;
-    border: 2px solid #fff;
+    border: 1px solid currentColor;
     background: #f5222d;
     border-radius: 50%;
     height: 0.6em;
