--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -306,6 +306,12 @@
   align-items: center;
   pointer-events: none;
 
+  &.hidden {
+    pointer-events: none;
+    visibility: hidden;
+    opacity: 0;
+  }
+
   &.right {
     height: 100vh;
     width: 60px;
