fix: move suggestion prefix to QueryOutput and make optional

--- a/src/components/Notifications/DataAlertModal/DataAlertModal.scss
+++ b/src/components/Notifications/DataAlertModal/DataAlertModal.scss
@@ -30,3 +30,7 @@
   color: var(--react-autoql-danger-color);
   display: 'inline-block';
 }
+
+.react-autoql-data-alert-query-name-tooltip-icon {
+  color: var(--react-autoql-info-color);
+}
